Sass generation work; also move things around

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -5,22 +5,21 @@
 <meta charset='utf-8'>
 <title>Playground</title>
 
-<!-- Default styles -->
-<link rel="stylesheet" href="../js/lib/jquery-ui/themes/base/all.css">
-<link rel="stylesheet" href="../js/lib/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="../js/lib/chosen/chosen.min.css">
-<link rel="stylesheet" href="../js/lib/fontawesome/css/font-awesome.min.css">
-
-<!-- Custom styles -->
-<link rel="stylesheet" href="../css/font-declaration.css">
-<link rel="stylesheet" href="../css/playground.css">
+<!-- Library styles -->
+<link rel="stylesheet" href="../../../asset/lib/jquery-ui/themes/base/all.css">
+<link rel="stylesheet" href="../../../asset/lib/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../../asset/lib/chosen/chosen.min.css">
+<link rel="stylesheet" href="../../../asset/lib/fontawesome/css/font-awesome.min.css">
 
 <!-- JS dependencies -->
-<script src="../../../lib/jquery/dist/jquery.min.js"></script>
-<script src="../../../lib/jquery-ui/jquery-ui.min.js"></script>
-<script src="../../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../../../lib/chosen/chosen.jquery.min.js"></script>
-<script src="../../../lib/lodash/lodash.min.js"></script>
+<script src="../../../asset/lib/jquery/dist/jquery.min.js"></script>
+<script src="../../../asset/lib/jquery-ui/jquery-ui.min.js"></script>
+<script src="../../../asset/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../../asset/lib/chosen/chosen.jquery.min.js"></script>
+<script src="../../../asset/lib/lodash/lodash.min.js"></script>
+
+<!-- Project styles -->
+<link rel="stylesheet" href="../../../asset/css/playground.css">
 
 <!-- App JS -->
 <script src="../js/App.js"></script>
@@ -42,7 +41,7 @@
 					</button>
 
 					<div class="branding">
-						<img class="logo-img" src="../../../img/KM64.png" width="64" height="64"/>
+						<img class="logo-img" src="../../../asset/img/KM48.png" width="48" height="48"/>
 						<span class="logo-text brand">PhiLhoSoft</span> <span class="logo-text">Playground</span>
 					</div>
 				</div>
