--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -47,21 +47,20 @@
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse"
-						id="bs-pls-navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li id="nav-foo"><a href="./#foo"><i class="fa fa-list"></i>Foo</a></li>
-						<li id="nav-bar"><a href="./#bar"><i class="fa fa-list"></i>Bar</a></li>
+				<div class="collapse navbar-collapse" id="bs-pls-navbar-collapse">
+					<ul class="nav navbar-nav" role="navigation">
+						<li id="nav-foo" class="navbar-nav-item"><a class="navbar-nav-link" href="./#foo"><i class="fa fa-list"></i>Foo</a></li>
+						<li id="nav-bar" class="navbar-nav-item"><a class="navbar-nav-link" href="./#bar"><i class="fa fa-list"></i>Bar</a></li>
 					</ul>
 
-					<ul class="nav navbar-nav navbar-right">
-						<li><a id="home-link" href="http://google.com" title="Home"><i class="fa fa-th"></i></a></li>
-						<li id="nav-help"><a href="./#help"><i class="fa fa-book"></i>Help</a></li>
-						<li id="nav-about"><a href="./#about"><i class="fa fa-question"></i>About</a></li>
+					<ul class="nav navbar-nav navbar-right" role="navigation">
+						<li id="nav-home" class="navbar-nav-item"><a class="navbar-nav-link" href="http://google.com" title="Home"><i class="fa fa-th"></i></a></li>
+						<li id="nav-help" class="navbar-nav-item"><a class="navbar-nav-link" href="./#help"><i class="fa fa-book"></i>Help</a></li>
+						<li id="nav-about" class="navbar-nav-item"><a class="navbar-nav-link" href="./#about"><i class="fa fa-question"></i>About</a></li>
 						<!--
 						<li class="user-name">{userName}</li>
 						-->
-						<li><a id="logout-link" href="" onclick="logout()"><i class="fa fa-sign-out"></i>Log out</a></li>
+						<li id="nav-logout" class="navbar-nav-item"><a class="navbar-nav-link" href="" onclick="logout()"><i class="fa fa-sign-out"></i>Log out</a></li>
 
 					</ul>
 				</div>
