WiP: loading libraries with RequireJS

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -3,26 +3,28 @@
 <head>
 
 <meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width">
+
 <title>Playground</title>
 
 <!-- Library styles -->
 <link rel="stylesheet" href="../../../asset/lib/jquery-ui/themes/base/all.css">
 <link rel="stylesheet" href="../../../asset/lib/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="../../../asset/lib/chosen/chosen.min.css">
 <link rel="stylesheet" href="../../../asset/lib/fontawesome/css/font-awesome.min.css">
-
-<!-- JS dependencies -->
-<script src="../../../asset/lib/jquery/dist/jquery.min.js"></script>
-<script src="../../../asset/lib/jquery-ui/jquery-ui.min.js"></script>
-<script src="../../../asset/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../../../asset/lib/chosen/chosen.jquery.min.js"></script>
-<script src="../../../asset/lib/lodash/lodash.min.js"></script>
 
 <!-- Project styles -->
 <link rel="stylesheet" href="../../../asset/css/playground.css">
 
-<!-- App JS -->
-<script src="../js/App.js"></script>
+<!-- JS dependencies managed by RequireJS -->
+<script data-main="../js/App" src="../../../asset/lib/requirejs/require.js"></script>
+
+<!-- JS dependencies
+<script src="../../../asset/lib/jquery/dist/jquery.min.js"></script>
+<script src="../../../asset/lib/jquery-ui/jquery-ui.min.js"></script>
+<script src="../../../asset/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../../asset/lib/lodash/lodash.min.js"></script>
+-->
 
 </head>
 <body>
