--- a/src/test/Testbed.html
+++ b/src/test/Testbed.html
@@ -20,7 +20,6 @@
 	<script src="../../lib/jquery/dist/jquery.min.js"></script>
 	<script src="../../lib/jquery-ui/jquery-ui.min.js"></script>
 	<script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="../../lib/chosen/chosen.jquery.min.js"></script>
 	<script src="../../lib/lodash/lodash.min.js"></script>
 
 	<!-- Application scripts -->
@@ -36,7 +35,7 @@
 
 	<!-- Test scripts -->
 	<script src="js/TestApp.js"></script>
-	<script src="js/TestUtilities.js"></script>
+	<script src="js/TestCow.js"></script>
 
 	<script>
 		if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
