Untested change of tools, renaming of dirs

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -10,16 +10,12 @@
 <meta name="description" content="Web playground for PhiLhoSoft experimentations on the browser side.">
 
 <!-- Library styles -->
-<link rel="stylesheet" href="../asset/lib/jquery-ui/themes/base/all.css">
-<link rel="stylesheet" href="../asset/lib/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="../asset/lib/fontawesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="../assets/libs/jquery-ui/themes/base/all.css">
+<link rel="stylesheet" href="../assets/libs/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="../assets/libs/fontawesome/css/font-awesome.min.css">
 
 <!-- Project styles -->
-<link rel="stylesheet" href="../asset/css/playground.css">
-
-<!-- JS dependencies managed by Browserify -->
-<script src="libraries.js"></script>
-<script src="index.js"></script>
+<link rel="stylesheet" href="../assets/css/playground.css">
 
 </head>
 <body>
@@ -71,6 +67,10 @@
 
 	<!-- Page content -->
 	<div id="content" class="content"></div>
+
+	<!-- JS dependencies managed by Browserify -->
+	<script src="libraries.js"></script>
+	<script src="index.js"></script>
 </body>
 
 </html>
